--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
   </section>
   <section class="saved-posters hidden">
     <h2>Saved Posters</h2>
-    <div class="saved-posters-grid"></div>
+    <div class="saved-posters-grid">
+      
+    </div>
     <button class="back-to-main">Back to Main</button>
   </section>
   <script src="./src/main.js"></script>
