--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <button class="show-saved">Show Saved Posters</button>
     <button class="show-random">Show Another Random Poster</button>
     <button class="show-form">Make Your Own Poster</button>
+    <button class="unmotivational">Unmotivational Poster</button>
   </section>
   <section class="poster-form hidden">
     <form>
@@ -35,10 +36,15 @@
   </section>
   <section class="saved-posters hidden">
     <h2>Saved Posters</h2>
-    <div class="saved-posters-grid">
-      
-    </div>
+    <div class="saved-posters-grid"></div>
     <button class="back-to-main">Back to Main</button>
+  </section>
+
+  <section class="unmotivational-poster hidden">
+    <h2>Unmotivational Posters</h2>
+    <div class="unmotivational-poster-grid">
+    </div>
+    <button class="main-appear">Please, bring me to main!</button>
   </section>
   <script src="./src/main.js"></script>
 </body>
